CHANGES IN FLTK 1.1.5rc2

	- Documentation updates (STR #365, STR #399, STR #407,
	  STR #412, STR #414, STR #452, STR #462)
	- All of the core widgets now consistently set changed()
	  before calling the callback function for a change in
	  value; this allows programs to check the changed()
	  state in a callback to see why they are being called
	  (STR #475)
	- Fl_File_Chooser did not handle some cases for filename
	  completion (STR #376)
	- Fl_Help_View didn't properly compute the default
	  maximum width of the page properly, resulting in
	  non-wrapped text in table cells (STR #464)
	- Fl_Text_Editor no longer tries to emulate the Emacs
	  CTRL-A shortcut to move to the first column, since
	  there is a key for that and the widget does not
	  emulate any other Emacs keys (STR #421)
	- Fl_File_Chooser always disabled the OK button when the
	  user pressed DELETE or BACKSPACE (STR #397)
	- Added Fl_Browser::swap() methods (STR #459)
	- Fl_Counter didn't use a thin down box for the text
	  field if the box type was set to FL_THIN_UP_BOX (STR
	  #467)
	- Fl_Help_View now resets the scrollbars if they go
	  outside the current view (STR #464)
	- fl_dir_chooser() did not show the previous selection
	  as documented (STR #443)
	- Fl_Text_Display used delete[] instead of free() in
	  some places (STR #466)
	- FLTK now includes copies of the PNG, JPEG, and ZLIB
	  libraries for platforms that do not have them (STR
	  #441)
	- The fltk-config script did not include the
	  "-mno-cygwin" option under CygWin (STR #434)
	- Fl_Help_View::find() did not check for a NULL value
	  (STR #442)
	- Added search symbol to the search field of
	  Fl_Help_Dialog (STR #417)
	- Added two new symbols, @search and @FLTK, which can be
	  used in labels.
	- MacOS X: fixed NumLock mixup, added support for
	  FL_Menu and FL_Delete keys on external (PC) keyboards
	  (STR #445)
	- Fl_File_Icon::draw() did not support drawing of complex
	  polygons in icon descriptions (STR #474)